[package]
name = "waft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["json", "tokio", "ws"] }
axum-extra = { version =  "0.9.3", features = ["cookie"] }
chrono = "0.4.38"
circular-buffer = "0.1.7"
clap = { version = "4.5.4", features = ["derive"] }
# commonlib = "0.1.1"
commonlib = { git = "https://github.com/radiohertz/xiu.git", branch = "fix-rtmp-token-issue"}
futures = "0.3.30"
#rtmp = "0.6.3"
rtmp = { git = "https://github.com/radiohertz/xiu.git", branch = "fix-rtmp-token-issue"}
httpflv = { git = "https://github.com/radiohertz/xiu.git", branch = "fix-rtmp-token-issue"}
serde = "1.0.200"
serde_json = "1.0.116"
# streamhub = "0.2.2"
streamhub = { git = "https://github.com/radiohertz/xiu.git", branch = "fix-rtmp-token-issue"}
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = {version = "0.12.4", features = ["stream"]}
bytes = "1.6.0"
